tests resources finalize